[gd_scene load_steps=10 format=3 uid="uid://wxcynk3p2gjl"]

[ext_resource type="Script" uid="uid://dl43yl3kcxqfo" path="res://UI/Scripts/win_screen.gd" id="1_w024j"]
[ext_resource type="Theme" uid="uid://cjk4ci1au4rg7" path="res://Resources/Themes/main_theme.tres" id="2_7c84e"]
[ext_resource type="Texture2D" uid="uid://b7ebpt06cucos" path="res://Resources/Assets/winscreen.png" id="2_qpj51"]
[ext_resource type="PackedScene" uid="uid://hd2d0o02f711" path="res://Globals/Components/CRT_viewport.tscn" id="4_qpj51"]

[sub_resource type="Animation" id="Animation_qpj51"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_w024j"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oqmmh"]
_data = {
&"RESET": SubResource("Animation_qpj51"),
&"fade_in": SubResource("Animation_w024j")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oqmmh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mwi6r"]

[node name="WinScreen" type="Node2D"]
script = ExtResource("1_w024j")

[node name="FadeRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = -21.0
offset_top = -10.0
offset_right = 1311.0
offset_bottom = 745.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeRect"]
libraries = {
&"": SubResource("AnimationLibrary_oqmmh")
}

[node name="TextureRect" type="Sprite2D" parent="."]
position = Vector2(641, 357)
scale = Vector2(0.838542, 0.722656)
texture = ExtResource("2_qpj51")

[node name="CenterContainer" type="CenterContainer" parent="TextureRect"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -972.0
offset_top = -764.75
offset_right = -564.0
offset_bottom = -684.75
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/CenterContainer"]
custom_minimum_size = Vector2(300, 125)
layout_mode = 2

[node name="Play Again" type="Button" parent="TextureRect/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme = ExtResource("2_7c84e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_oqmmh")
text = "Play Again"

[node name="Control" type="Control" parent="TextureRect/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Main Menu" type="Button" parent="TextureRect/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme = ExtResource("2_7c84e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mwi6r")
text = "Menu"

[node name="Shader" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" parent="Shader" instance=ExtResource("4_qpj51")]

[connection signal="mouse_entered" from="TextureRect/CenterContainer/HBoxContainer/Play Again" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/CenterContainer/HBoxContainer/Play Again" to="." method="_on_play_again_pressed"]
[connection signal="mouse_entered" from="TextureRect/CenterContainer/HBoxContainer/Main Menu" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TextureRect/CenterContainer/HBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
